# Mini-Wheelbot

./: .gitignore  README.md
hardware/meshes/: actuator_rotor.stl
hardware/microcontroller-software/micro-motor/: .gitignore
hardware/microcontroller-software/micro-motor/app-wb/: README.md  SConstruct  data.hpp  encoder.hpp  main.cpp  motor_can.hpp  project.xml  utils.hpp
hardware/microcontroller-software/micro-motor/app-wb/librobots2/: SConscript
hardware/microcontroller-software/micro-motor/app-wb/micro-motor/: SConscript
hardware/microcontroller-software/micro-motor/app-wb/micro-motor/src/micro-motor/: hardware.hpp  logger.cpp
hardware/microcontroller-software/micro-motor/app-wb/modm/: .gitignore  SConscript  gdbinit  gdbinit_bmp  gdbinit_jlink  gdbinit_openocd  openocd.cfg
hardware/microcontroller-software/micro-motor/app-wb/modm/ext/gcc/: cabi.c  cxxabi.cpp  new_delete.cpp
hardware/microcontroller-software/micro-motor/app-wb/modm/ext/printf/: printf.c  printf.h  printf_config.h
hardware/microcontroller-software/micro-motor/app-wb/modm/link/: linkerscript.ld
hardware/microcontroller-software/micro-motor/app-wb/modm/modm_tools/: __init__.py  bmp.py  build_id.py  elf2uf2.py  itm.py  jlink.py  openocd.py  rtt.py  size.py
hardware/microcontroller-software/micro-motor/app-wb/modm/scons/site_tools/: build_target.py  dfu.py  gcc_retarget.py
hardware/microcontroller-software/micro-motor/app-wb/modm/src/modm/: math.hpp  platform.hpp  processing.hpp
hardware/microcontroller-software/micro-motor/app-wb/tasks/: can_thread.hpp  control_thread.hpp  debug_thread.hpp  encoder_interrupt.hpp  foc_interrupt.hpp
hardware/microcontroller-software/power-distribution/app-pdb/: board.hpp  main.cpp  project.xml
hardware/schematic/: README.md
wheelbot-lib/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
wheelbot-lib/config/: default.json  good_boampc.json
wheelbot-lib/include/wheelbot/: accel.hpp  can.hpp  config.hpp  constants.hpp  controller.hpp  datalogger.hpp  estimator.hpp  gyro.hpp  inputserver.hpp  motorestimator.hpp  odometry.hpp  uprightdetection.hpp
wheelbot-lib/include/wheelbot/action_20240528-132835/190.eqx/: Makefile  main.cpp  neural_network.hpp
wheelbot-lib/include/wheelbot/sensitivity_20240528-181320/93.eqx/: main.cpp  neural_network.hpp
wheelbot-lib/scripts/keyboardcontrol/: main.py
wheelbot-lib/scripts/sysid/: README.md  datasets.py  sysid_nonlinear.py
wheelbot-lib/scripts/sysid/dynamics/: fM.py  fb.py  fg.py  wheelbot_model.py
wheelbot-lib/src/: main.cpp
wheelbot-lib/test/accel/: main.cpp
wheelbot-lib/test/can/: main.cpp
wheelbot-lib/test/configuration/: main.cpp
wheelbot-lib/test/gyro/: main.cpp
wheelbot-lib/test/imu_thread/: main.cpp
wheelbot-lib/test/inputserver/: main.cpp
wheelbot-lib/test/logging/: main.cpp
wheelbot-lib/test/queue/: main.cpp
(+318 files in other folders)
